--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@shopify/polaris": "^10.0.0",
+    "jspdf": "^2.5.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
